# fastapi-blog

./: README.md  auth.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 496eee688d7a_initial_schema.py  d66a365351ff_add_likes_to_posts.py
routers/: posts.py  users.py
static/js/: auth.js
templates/: account.html  layout.html  login.html  post.html  register.html
